Fixed overflow

--- a/main2.css
+++ b/main2.css
@@ -1,5 +1,7 @@
 /* Nav-bar for page 2*/
-
+body {
+  overflow-x: hidden;
+}
 .nav-bar-text {
   margin-right: -110px;
 }
